admin/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: pdns-admin
  namespace: pdns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: powerdns-admin
