admin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdns-admin-ingress
  namespace: pdns
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: dns-clusterissuer
spec:
  rules:
  - host: pdns.home.thejimnicholson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdns-admin
            port: 
              number: 80
  tls:
  - hosts:
    - pdns.home.thejimnicholson.com
    secretName: pdns.home.thejimnicholson.com
